Fixed navbar on iphone bug

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -27,7 +27,7 @@
 }
 
 @media (max-width : 400px) {
-  .fixed-top { position: -webkit-sticky; position: sticky;}
+  /* .fixed-top { position: -webkit-sticky; position: sticky;} */
   .cov-img {height: 80px;}
 }
 
